# Autonomous-Warehouse-System-with-Cloud-Based-Control-and-DashBoard

./: .gitignore  README.md  Team10_Autonomous Warehouse Management System using Cloud.docx  WareHouse_System.sdf  mycobot.sdf
CAD Models/RaspRover/: RaspRover.sdf
CAD Models/RaspRover/meshes/: Wheel_BL.stl  Wheel_FR.stl
CAD_Models/(Unsaved)/: (Unsaved).sdf  model.config
CAD_Models/MyCobot/: MyCobot.urdf  hello_bullet.py
CAD_Models/RaspRover/: RaspRover.sdf  model.config
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build
src/AutoWarehouse/: Implementation_Plan.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  usage.txt
src/ESP_MQTT_Communication/: ESP_MQTT_Communication.ino
src/mycobot_sim/: package.xml  setup.cfg  setup.py
src/warehouse/: CMakeLists.txt  RaspRover.sdf  package.xml
src/warehouse/meshes/: 3.stl  Camera_Pitch.stl  Component46-v1.stl  Component49-v1.stl  ST6A1914L8_11_1_1^ST6A1914L8_ASM_1_ASM_1_ASM_ATOM_ASM_ASM_1_ASM_1_ASM_atom_matrix_Ð¡ÆÁÄ».stl  atom_matrix^Ð¡ÆÁÄ».stl  base_l.stl  endeff.stl  gripper_1.stl  j3_1.stl  j4_1.stl  wrist.stl
src/warehouse/models/: warehouse.sdf
src/warehouse/models/RaspRover/: RaspRover.sdf  joints.sdf  myCobot.sdf  warehouse.sdf.config
src/warehouse/models/RaspRover/meshes/: 6.stl  Component47-v1.stl  Wheel_BR.stl  adapter-v1.stl  base.stl  base_link.stl  elbow1.stl  elbow2.stl  grip_phone_v1_1.stl  iPhone17_v1_1.stl  j1_1.stl  j2_1.stl  j5_1.stl  j6_1.stl  shoulder.stl
src/warehouse/urdf/: myCobot_280_PI_230708.urdf
(+40 files in other folders)
